--- a/PlantPlaces/WebContent/index.html
+++ b/PlantPlaces/WebContent/index.html
@@ -1,11 +1,13 @@
-<?xml version="1.0" encoding="windows-1255" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<?xml version="1.0" encoding="windows-1255" ?>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1255" />
-<title>Plant Places.com</title>
+	<meta content="text/html; charset=windows-1255" http-equiv="Content-Type" />
+	<title>Plant Places.com</title>
 </head>
-<body>
+<body dir="rtl">
 <h1>Welcome to PlantPlaces.com</h1>
+
+<h1>test1</h1>
 </body>
 </html>
